// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VoteDetail should not render if not open 1`] = `<DocumentFragment />`;

exports[`VoteDetail should render a modal with unvotes 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-5lu2mc-0 wWqtC"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="sc-bdnxRM AFVmm"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Delegate Vote
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 kQeQRD no-ligatures"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                >
                  ID
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex overflow-hidden items-baseline space-x-3"
                  >
                    <span
                      class="overflow-hidden"
                    >
                      <a
                        class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="#"
                        rel="noopener noreferrer"
                        to="https://explorer.ark.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                      >
                        <span
                          class="Link__Content-sc-ec014t-1 hUiuRR"
                        >
                          <span
                            class="inline-flex overflow-hidden"
                          >
                            ea63bf9a4b3eaf75a1dfff721967c45dce64eb7facf1aef29461868681b5c79b
                          </span>
                        </span>
                        <div
                          class="sc-bdnxRM AFVmm flex-shrink-0 duration-200 inline-block text-sm"
                          data-testid="Link__external"
                          height="16"
                          width="16"
                        >
                          <svg>
                            arrow-external.svg
                          </svg>
                        </div>
                      </a>
                    </span>
                    <span
                      class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <button
                        class="relative focus:outline-none ring-focus"
                        data-ring-focus-margin="-m-1"
                        data-testid="clipboard-icon__wrapper"
                        type="button"
                      >
                        <div
                          class="sc-bdnxRM AFVmm"
                          height="16"
                          width="16"
                        >
                          <svg>
                            copy.svg
                          </svg>
                        </div>
                      </button>
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 guMZnB no-ligatures"
              data-testid="TransactionSender"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                >
                  Sender
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center -space-x-1"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionUnvotes"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                >
                  Unvotes (1)
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="VoteList__ListWrapper-sc-1nnybs4-0 glbdNa"
                  >
                    <div
                      class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-18vw8a4-0 fuPYca flex-shrink-0"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                        >
                          <img
                            alt="034151a3ec46b5670a682b0a63394f863587d1bc97483b1b6c70eb58e7f0aed192"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"30\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"40\\" cy=\\"60\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"45\\" cx=\\"100\\" cy=\\"50\\" fill=\\"rgb(0, 188, 212)\\"/></svg>"
                            title="034151a3ec46b5670a682b0a63394f863587d1bc97483b1b6c70eb58e7f0aed192"
                          />
                        </div>
                      </div>
                      <div
                        class="flex-1 ml-4 w-28"
                      >
                        <div
                          class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                        >
                          <span
                            class="font-semibold text-base text-theme-text"
                            data-testid="Address__alias"
                          >
                            <span
                              class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                              data-testid="TruncateEnd"
                            >
                              delegate-0
                            </span>
                          </span>
                          <span
                            class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                            data-testid="Address__address"
                          >
                            034151a3ec46b5670a682b0a63394f863587d1bc97483b1b6c70eb58e7f0aed192
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionFee"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                >
                  Transaction Fee
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="AmountCrypto"
                  >
                    21 ARK
                  </span>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionTimestamp"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                >
                  Timestamp
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  31.07.2020 4:34 PM
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                >
                  Status
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW text-theme-warning-300"
                      height="20"
                      width="20"
                    >
                      <svg>
                        clock.svg
                      </svg>
                    </div>
                    <span>
                      Not yet confirmed
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VoteDetail should render a modal with votes 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-5lu2mc-0 wWqtC"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="sc-bdnxRM AFVmm"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Delegate Vote
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 kQeQRD no-ligatures"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                >
                  ID
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex overflow-hidden items-baseline space-x-3"
                  >
                    <span
                      class="overflow-hidden"
                    >
                      <a
                        class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="#"
                        rel="noopener noreferrer"
                        to="https://explorer.ark.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                      >
                        <span
                          class="Link__Content-sc-ec014t-1 hUiuRR"
                        >
                          <span
                            class="inline-flex overflow-hidden"
                          >
                            ea63bf9a4b3eaf75a1dfff721967c45dce64eb7facf1aef29461868681b5c79b
                          </span>
                        </span>
                        <div
                          class="sc-bdnxRM AFVmm flex-shrink-0 duration-200 inline-block text-sm"
                          data-testid="Link__external"
                          height="16"
                          width="16"
                        >
                          <svg>
                            arrow-external.svg
                          </svg>
                        </div>
                      </a>
                    </span>
                    <span
                      class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <button
                        class="relative focus:outline-none ring-focus"
                        data-ring-focus-margin="-m-1"
                        data-testid="clipboard-icon__wrapper"
                        type="button"
                      >
                        <div
                          class="sc-bdnxRM AFVmm"
                          height="16"
                          width="16"
                        >
                          <svg>
                            copy.svg
                          </svg>
                        </div>
                      </button>
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 guMZnB no-ligatures"
              data-testid="TransactionSender"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                >
                  Sender
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center -space-x-1"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionVotes"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                >
                  Votes (1)
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="VoteList__ListWrapper-sc-1nnybs4-0 glbdNa"
                  >
                    <div
                      class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-18vw8a4-0 fuPYca flex-shrink-0"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                        >
                          <img
                            alt="034151a3ec46b5670a682b0a63394f863587d1bc97483b1b6c70eb58e7f0aed192"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"30\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"40\\" cy=\\"60\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"45\\" cx=\\"100\\" cy=\\"50\\" fill=\\"rgb(0, 188, 212)\\"/></svg>"
                            title="034151a3ec46b5670a682b0a63394f863587d1bc97483b1b6c70eb58e7f0aed192"
                          />
                        </div>
                      </div>
                      <div
                        class="flex-1 ml-4 w-28"
                      >
                        <div
                          class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                        >
                          <span
                            class="font-semibold text-base text-theme-text"
                            data-testid="Address__alias"
                          >
                            <span
                              class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                              data-testid="TruncateEnd"
                            >
                              delegate-0
                            </span>
                          </span>
                          <span
                            class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                            data-testid="Address__address"
                          >
                            034151a3ec46b5670a682b0a63394f863587d1bc97483b1b6c70eb58e7f0aed192
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionFee"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                >
                  Transaction Fee
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="AmountCrypto"
                  >
                    21 ARK
                  </span>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionTimestamp"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                >
                  Timestamp
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  31.07.2020 4:34 PM
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                >
                  Status
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW text-theme-warning-300"
                      height="20"
                      width="20"
                    >
                      <svg>
                        clock.svg
                      </svg>
                    </div>
                    <span>
                      Not yet confirmed
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VoteDetail should render a modal with votes and unvotes 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-5lu2mc-0 wWqtC"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="sc-bdnxRM AFVmm"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Delegate Vote
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 kQeQRD no-ligatures"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                >
                  ID
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex overflow-hidden items-baseline space-x-3"
                  >
                    <span
                      class="overflow-hidden"
                    >
                      <a
                        class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="#"
                        rel="noopener noreferrer"
                        to="https://explorer.ark.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                      >
                        <span
                          class="Link__Content-sc-ec014t-1 hUiuRR"
                        >
                          <span
                            class="inline-flex overflow-hidden"
                          >
                            ea63bf9a4b3eaf75a1dfff721967c45dce64eb7facf1aef29461868681b5c79b
                          </span>
                        </span>
                        <div
                          class="sc-bdnxRM AFVmm flex-shrink-0 duration-200 inline-block text-sm"
                          data-testid="Link__external"
                          height="16"
                          width="16"
                        >
                          <svg>
                            arrow-external.svg
                          </svg>
                        </div>
                      </a>
                    </span>
                    <span
                      class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <button
                        class="relative focus:outline-none ring-focus"
                        data-ring-focus-margin="-m-1"
                        data-testid="clipboard-icon__wrapper"
                        type="button"
                      >
                        <div
                          class="sc-bdnxRM AFVmm"
                          height="16"
                          width="16"
                        >
                          <svg>
                            copy.svg
                          </svg>
                        </div>
                      </button>
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 guMZnB no-ligatures"
              data-testid="TransactionSender"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                >
                  Sender
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center -space-x-1"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionUnvotes"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                >
                  Unvotes (1)
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="VoteList__ListWrapper-sc-1nnybs4-0 glbdNa"
                  >
                    <div
                      class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-18vw8a4-0 fuPYca flex-shrink-0"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                        >
                          <img
                            alt="034151a3ec46b5670a682b0a63394f863587d1bc97483b1b6c70eb58e7f0aed192"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"30\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"40\\" cy=\\"60\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"45\\" cx=\\"100\\" cy=\\"50\\" fill=\\"rgb(0, 188, 212)\\"/></svg>"
                            title="034151a3ec46b5670a682b0a63394f863587d1bc97483b1b6c70eb58e7f0aed192"
                          />
                        </div>
                      </div>
                      <div
                        class="flex-1 ml-4 w-28"
                      >
                        <div
                          class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                        >
                          <span
                            class="font-semibold text-base text-theme-text"
                            data-testid="Address__alias"
                          >
                            <span
                              class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                              data-testid="TruncateEnd"
                            >
                              delegate-0
                            </span>
                          </span>
                          <span
                            class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                            data-testid="Address__address"
                          >
                            034151a3ec46b5670a682b0a63394f863587d1bc97483b1b6c70eb58e7f0aed192
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionVotes"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                >
                  Votes (1)
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="VoteList__ListWrapper-sc-1nnybs4-0 glbdNa"
                  >
                    <div
                      class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-18vw8a4-0 fuPYca flex-shrink-0"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                        >
                          <img
                            alt="034151a3ec46b5670a682b0a63394f863587d1bc97483b1b6c70eb58e7f0aed192"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"30\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"40\\" cy=\\"60\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"45\\" cx=\\"100\\" cy=\\"50\\" fill=\\"rgb(0, 188, 212)\\"/></svg>"
                            title="034151a3ec46b5670a682b0a63394f863587d1bc97483b1b6c70eb58e7f0aed192"
                          />
                        </div>
                      </div>
                      <div
                        class="flex-1 ml-4 w-28"
                      >
                        <div
                          class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                        >
                          <span
                            class="font-semibold text-base text-theme-text"
                            data-testid="Address__alias"
                          >
                            <span
                              class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                              data-testid="TruncateEnd"
                            >
                              delegate-0
                            </span>
                          </span>
                          <span
                            class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                            data-testid="Address__address"
                          >
                            034151a3ec46b5670a682b0a63394f863587d1bc97483b1b6c70eb58e7f0aed192
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionFee"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                >
                  Transaction Fee
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="AmountCrypto"
                  >
                    21 ARK
                  </span>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionTimestamp"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                >
                  Timestamp
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  31.07.2020 4:34 PM
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                >
                  Status
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW text-theme-warning-300"
                      height="20"
                      width="20"
                    >
                      <svg>
                        clock.svg
                      </svg>
                    </div>
                    <span>
                      Not yet confirmed
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
